--- a/css/style.css
+++ b/css/style.css
@@ -184,23 +184,23 @@ nav .icon-burger:focus {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  display: flex;
-  margin: 0 15%;
+   margin: 0 15%;
 }
 
 .home .icon_links {
-  display: block;
-  padding-right: 7rem;
+   padding-right: 7rem;
+   display: flex;
+   flex-direction: column;
+   gap: 0.5rem;
 }
 
 .icon_links a {
-  display: block;
   font-size: 3.5rem;
   color: var(--grey);
   text-decoration: none;
+  margin: 0;
   padding: 0;
-  margin: 0 0 0.5rem 0;
-}
+ }
 
 .icon_links a:hover {
   color: var(--white);
@@ -259,9 +259,11 @@ nav .icon-burger:focus {
 }
 
 .button {
+  border: 0.2rem solid var(--dark_blue);
+ margin-right: 0.5rem;
   border-radius: 0.5rem;
   padding: 1.5rem 2rem;
-  font-size: clamp(1.6rem, 2vw, 2.2rem);
+   font-size: clamp(1.6rem, 2vw, 2.2rem);
   cursor: pointer;
   text-decoration: none;
   color: var(--white);
@@ -272,107 +274,75 @@ nav .icon-burger:focus {
   z-index: 1;
   box-sizing: border-box;
   background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
-
-
-
 }
 
-.button:before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: transparent;
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
-
-.button:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: var(--blue);
-  border-radius: 50%;
-  display: block;
-  transition: all 0.1s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
 
 .button:hover {
   color: var(--white);
   transition: ease-in-out 0.5s;
 }
 
-.button:hover:before {
-  top: -35%;
-  background-color: var(--blue);
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
+.button2 {
+ 
+  border-radius: 0.5rem;
+  padding: 1.5rem 5rem;
+   font-size: clamp(1.6rem, 2vw, 2.2rem);
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--white);
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  box-sizing: border-box;
+  border: 0.2rem solid var(--dark_blue);
+ }
 
-.button:hover:after {
-  top: -45%;
-  background-color: var(--blue);
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
+
 
 /********************** End Home Section ****************************/
 
 /*********************** About Section ********************************/
 .about {
-  padding: 10% 15%;
-  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+  padding: 10% 15% 5% 15%;
+  background-color: var(--background);
 }
 
 .about h1 {
   margin: 0;
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 1rem;
-  color: var(--white);
+  color: var(--blue);
 }
 
-.about .about_flex {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.about .about_flex .about_flex1 {
-  flex: 60%;
-}
-
-.about .about_flex .about_flex2 {
-  flex: 40%;
-}
-
-.about .about_flex .about_flex1 p {
-  padding: 0 6rem 0 0;
-  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+.about p {
+   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   color: var(--white);
   line-height: 1.5;
 }
 
-.about_flex2 p {
-  font-weight: bold;
-  padding: 0 0 0 0;
-  margin: 0;
-  font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-  color: var(--yellow);
+/********************* End About Section **************************/
+
+
+/********************* Techstack Section **************************/
+.skills{
+  padding: 5% 15% 7% 15%;
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+text-align: center;}
+
+.skills p {
+   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
+  color: var(--white);
   line-height: 1.5;
-}
+ }
 
 .icons_container {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 0 0 0;
-  gap: 0.5rem;
+   gap: 0.5rem;
+   align-items: center;
+   justify-content: center;
 }
 
 .icons_container .icons {
@@ -417,27 +387,28 @@ nav .icon-burger:focus {
 .icons:hover .icons_overlay {
   opacity: 1;
 }
+/*********************end  Techstack Section **************************/
 
-
-/********************* End About Section **************************/
 
 /*********************** Project Section **************************/
 .project {
   padding: 7% 15% 5% 15%;
   position: relative;
-  background-color: var(--light_background);
+  background-color: var(--background);
+  text-align: center;
 }
 
 .project h1 {
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
-  padding-bottom: 0px;
-  color: var(--yellow);
-}
+   color: var(--blue);
+   padding: 0;
+ }
 
 .project p {
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   color: var(--white);
   line-height: 1.5;
+ 
 }
 
 /* responsive Cols */
@@ -452,6 +423,7 @@ nav .icon-burger:focus {
 }
 
 .p-container {
+  border: 0.2rem solid var(--grey);
   position: relative;
   overflow: hidden;
   height: 100%;
@@ -491,7 +463,7 @@ nav .icon-burger:focus {
 }
 
 .overlay-title .title2 {
-  font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
+  font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
   width: 80%;
   margin: 0;
   padding: 0;
@@ -588,7 +560,7 @@ nav .icon-burger:focus {
   margin: 0;
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 3rem;
-  color: var(--yellow);
+  color: var(--blue);
 }
 
 .contact .wave {
@@ -638,7 +610,7 @@ nav .icon-burger:focus {
   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
   margin: 0;
   padding: 0;
-  color: var(--white);
+  color: var(--yellow);
 }
 
 .contact p {
@@ -672,7 +644,7 @@ nav .icon-burger:focus {
 
 .contact .contact_icons {
   display: flex;
-  gap: 0.8rem;
+  gap: 1rem;
   padding-bottom: 0.6rem;
 }
 
@@ -681,7 +653,7 @@ nav .icon-burger:focus {
   margin: 0;
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   display: inline-block;
-  color: var(--blue);
+  color: var(--grey);
 }
 
 .contact .contact_icons a:hover {
@@ -791,7 +763,7 @@ input[type="submit"]:focus {
 @media screen and (min-width: 100px) and (max-width: 480px) {
 
   nav {
-    padding: 0 5%;
+    padding: 0 6%;
   }
 
   nav .links {
@@ -841,19 +813,19 @@ input[type="submit"]:focus {
   }
 
   .home {
-    margin: 0 5%;
+    margin: 0 8%;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    text-align: center;
   }
 
   .home .icon_links {
     padding: 1rem 0 0 0;
-    display: flex;
-    gap: 1rem;
+     gap: 1rem;
     padding-right: 0;
-    width: 100%;
-  }
+    flex-direction: row;
+   }
 
   .home .icon_links a {
     font-size: 3rem;
@@ -874,11 +846,27 @@ input[type="submit"]:focus {
 
   }
 
+  .home .button{
+    text-align: center;
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .home .button2{
+    text-align: center;
+    width: 100%;
+   }
+
+
 
 
   .about {
-    padding: 20% 5%;
-  }
+    padding: 20% 8%;
+   }
+
+   .about h1{
+    text-align: center;
+   }
 
   .about .about_flex .about_flex1,
   .about_flex2 {
@@ -891,7 +879,7 @@ input[type="submit"]:focus {
 
   /***********************Project Section ***********************************/
   .project {
-    padding: 20% 5%;
+    padding: 20% 8%;
   }
 
   /* responsive Cols */
@@ -904,10 +892,17 @@ input[type="submit"]:focus {
     width: 90%;
   }
 
+ 
+
+
   /******************* End Project Section *****************************************************/
 
   .contact {
-    padding: 10rem 5%;
+    padding: 10rem 8%;
+  }
+
+  .contact h1{
+    text-align: center;
   }
 
   .contact .flex-contact-left,
@@ -940,11 +935,11 @@ input[type="submit"]:focus {
   }
 
   .home {
-    margin: 0 8%;
+    margin: 0 10%;
   }
 
   .about {
-    padding: 15% 8%;
+    padding: 15% 12%;
   }
 
   .about .about_flex .about_flex1 {
@@ -956,7 +951,7 @@ input[type="submit"]:focus {
   }
 
   .project {
-    padding: 15% 8%;
+    padding: 15% 12%;
   }
 
   .p-overlay p {
@@ -964,7 +959,7 @@ input[type="submit"]:focus {
   }
 
   .contact {
-    padding: 10% 8%;
+    padding: 10% 12%;
   }
 }
 
@@ -972,20 +967,24 @@ input[type="submit"]:focus {
 
 /********************************************** large desktop view******************************************************/
 @media screen and (min-width: 2000px) {
+
+  nav{
+    padding: 0 14%;
+  }
   .home {
-    margin: 0 12%;
+    margin: 0 18%;
   }
 
   .about {
-    padding: 10 12%;
+    padding: 10% 18%;
   }
 
   .project {
-    padding: 10rem 12%;
+    padding: 7% 18%;
   }
 
   .contact {
-    padding: 10% 12%;
+    padding: 8% 18%;
   }
 }
 
