--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ nav .logo {
 
 nav .logo_name {
   font-size: 120%;
-  font-weight: bold;
+  font-weight: 400;
   color: var(--grey);
   padding: 0;
   margin: 0;
@@ -219,6 +219,7 @@ nav .icon-burger:focus {
   margin: 0;
   padding: 0 0 0.5rem 0;
   color: var(--white);
+  font-weight: 400;
 }
 
 .home_wrapper .greetings2 {
@@ -227,6 +228,8 @@ nav .icon-burger:focus {
   padding: 0 0 0 0;
   color: var(--white);
   line-height: 1.5;
+  font-weight: 400;
+
 }
 
 .home_wrapper .greetings3 {
@@ -235,10 +238,11 @@ nav .icon-burger:focus {
   padding: 1rem 0 2rem 0;
   color: var(--white);
   line-height: 1.5;
+  font-weight: 200;
 }
 
 .home_wrapper .name {
-  font-weight: bold;
+  font-weight: 600;
   font-size: clamp(5rem, 6vw, 12rem);
   margin: 0;
   padding: 0;
@@ -318,12 +322,14 @@ nav .icon-burger:focus {
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 1rem;
   color: var(--blue);
+  font-weight: 400;
 }
 
 .about p {
    font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   color: var(--white);
   line-height: 1.5;
+  font-weight: 200;
 }
 
 /********************* End About Section **************************/
@@ -339,6 +345,7 @@ text-align: center;}
    font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
   color: var(--white);
   line-height: 1.5;
+  font-weight: 400;
  }
 
 .icons_container {
@@ -402,13 +409,14 @@ text-align: center;}
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
    color: var(--blue);
    padding: 0;
+   font-weight: 400;
  }
 
 .project p {
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   color: var(--white);
   line-height: 1.5;
- 
+  font-weight: 200;
 }
 
 /* responsive Cols */
@@ -453,7 +461,7 @@ text-align: center;}
 
 .overlay-title .title1 {
   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-  font-weight: bold;
+  font-weight: 400;
   width: 80%;
   margin: 0;
   padding: 0;
@@ -470,6 +478,7 @@ text-align: center;}
   color: var(--yellow);
   text-align: center;
   transition: opacity 0.4s ease-in-out;
+  font-weight: 200;
 }
 
 .p-overlay {
@@ -498,6 +507,7 @@ text-align: center;}
   line-height: 1.5;
   width: 80%;
   text-align: center;
+  font-weight: 200;
 }
 
 .p-container:hover .p-overlay {
@@ -561,6 +571,7 @@ text-align: center;}
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 3rem;
   color: var(--blue);
+  font-weight: 400;
 }
 
 .contact .wave {
@@ -618,6 +629,7 @@ text-align: center;}
   font-size: clamp(1.6rem, -1.4rem + 1.92vw, 2.2rem);
   color: var(--white);
   line-height: 1.5;
+  font-weight: 200;
 }
 
 .contact .flex-contact {
@@ -751,6 +763,7 @@ input[type="submit"]:focus {
   font-size: clamp(1.1rem, 0.1rem + 0.8vw, 1.6rem);
   color: var(--grey);
   line-height: 1.5;
+  font-weight: 200;
 }
 
 /*********************** End Footer Section ***********************/
