--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;500;600&display=swap');
 
 * {
   -webkit-text-size-adjust: none;
@@ -74,7 +74,7 @@ nav .logo {
 
 nav .logo_name {
   font-size: 120%;
-  font-weight: 400;
+  font-weight: 600;
   color: var(--grey);
   padding: 0;
   margin: 0;
@@ -191,7 +191,7 @@ nav .icon-burger:focus {
    padding-right: 7rem;
    display: flex;
    flex-direction: column;
-   gap: 0.5rem;
+   gap: 0rem;
 }
 
 .icon_links a {
@@ -219,7 +219,7 @@ nav .icon-burger:focus {
   margin: 0;
   padding: 0 0 0.5rem 0;
   color: var(--white);
-  font-weight: 400;
+  font-weight: 200;
 }
 
 .home_wrapper .greetings2 {
@@ -268,6 +268,7 @@ nav .icon-burger:focus {
   border-radius: 0.5rem;
   padding: 1rem 2rem;
    font-size: clamp(1.6rem, 2vw, 2.2rem);
+   font-weight: 200;
   cursor: pointer;
   text-decoration: none;
   color: var(--white);
@@ -290,6 +291,7 @@ nav .icon-burger:focus {
   border-radius: 0.5rem;
   padding: 1rem 5rem;
    font-size: clamp(1.6rem, 2vw, 2.2rem);
+   font-weight: 200;
   cursor: pointer;
   text-decoration: none;
   color: var(--white);
@@ -409,7 +411,7 @@ text-align: center;}
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
    color: var(--blue);
    padding: 0;
-   font-weight: 400;
+   font-weight: 500;
  }
 
 .project p {
@@ -436,6 +438,7 @@ text-align: center;}
   overflow: hidden;
   height: 100%;
   box-sizing: border-box;
+  border-radius: 0.5rem;
 }
 
 .p-container img {
@@ -461,7 +464,7 @@ text-align: center;}
 
 .overlay-title .title1 {
   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-  font-weight: 400;
+  font-weight: 500;
   width: 80%;
   margin: 0;
   padding: 0;
@@ -571,7 +574,7 @@ text-align: center;}
   font-size: clamp(3rem, 1rem + 1.6vw, 4.5rem);
   padding-bottom: 3rem;
   color: var(--blue);
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .contact .wave {
@@ -619,7 +622,7 @@ text-align: center;}
 
 .contact h2 {
   font-size: clamp(2.4rem, 1.2rem + 0.96vw, 3rem);
-  margin: 0;
+   margin: 0;
   padding: 0;
   color: var(--yellow);
 }
@@ -754,7 +757,7 @@ input[type="submit"]:focus {
 .footer .footer_img{
   height: 3rem;
   padding-right: 1rem;
-  border-right: 0.3rem solid var(--blue);
+  border-right: 0.2rem solid var(--blue);
 }
  
 
