--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ nav .icon-burger:focus {
 
 /*********************** About Section ********************************/
 .about {
-  padding: 10% 15% 5% 15%;
+  padding: 10% 15% 10% 15%;
   background-color: var(--background);
 }
 
@@ -801,7 +801,7 @@ input[type="submit"]:focus {
 .footer .footer_img{
   height: 3rem;
   padding-right: 0rem;
-  border-right: 0.1rem solid var(--blue);
+  border-right: 0.1rem solid var(--grey);
 }
  
 
@@ -1114,75 +1114,39 @@ input[type="submit"]:focus {
 }
 
 
-.loader_img {
-  width: 4.5rem;
-  height: 4.5rem;
-  background-color: var(--background);
-  padding: 0.3rem;
-  border-radius: 50%;
-  border: 0.8rem solid var(--blue);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  z-index: 99999;
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
-
-.loader_img img {
-  width: 3rem;
-  height: 3rem;
-}
-
-
-.loader {
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border: 1rem solid transparent;
-  border-radius: 50%;
-  width: 9rem;
-  height: 9rem;
-
+.lds-facebook div {
+  display: inline-block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 8px;
+  width: 16px;
+  background-image: linear-gradient(45deg, var(--blue), var(--dark_blue));
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
-
-.loader::before,
-.loader::after {
-  content: '';
-  border: 1.5rem solid var(--blue);
-  border-radius: 50%;
-  width: 10rem;
-  height: 10rem;
-
-  position: absolute;
-
-  animation: loader 1s linear infinite;
-  opacity: 0;
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
 }
-
-.loader::before {
-  animation-delay: 0.2s;
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
 }
-
-@keyframes loader {
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
   0% {
-    transform: scale(0);
-    opacity: 0;
+    top: 8px;
+    height: 64px;
   }
-
-  50% {
-    opacity: 1;
-
-  }
-
-  100% {
-    transform: scale(1);
-    opacity: 0;
-
+  50%, 100% {
+    top: 24px;
+    height: 32px;
   }
 }
